<resources>
    <string name="app_name">travelmaker</string>

    <!-- 공용 문구 -->
    <string name="signup_previous">이전</string>
    <string name="signup_next">다음</string>
    <string name="signup_complete">완료</string>

    <!-- 회원가입 1 아이디 와 패스워드  -->

    <string name="signup_idpw_title">회원가입을 진행합니다.\n아이디와 패스워드를\n설정 해주세요.</string>
    <string name="signup_hint_id_msg">아이디</string>
    <string name="signup_hint_pw_msg">비밀번호</string>
    <string name="signup_id_helper_msg">영문, 숫자 포함 6자리 이상</string>
    <string name="signup_pw_helper_msg">영문, 숫자 포함 8자리 이상</string>
    <string name="signup_label_id">아이디</string>
    <string name="signup_label_pw">비밀번호</string>
    <string name="signup_btn_check_dup_id">중복확인</string>

    <!-- 회원가입 2 닉네임 -->
    <string name="signup_nickname_title">사용하실 닉네임을\n    설정해주세요.</string>
    <string name="signup_hint_nickname_msg">닉네임을 입력해주세요</string>
    <string name="signup_nickname_helper_msg">프로필에 등록되는 닉네임으로\n이후 변경이 불가합니다.</string>
    <string name="signup_label_nickname">닉네임</string>
    <string name="signup_btn_check_dup_nickname">중복확인</string>

    <!-- 회원가입 3 동네인증   -->
    <string name="signup_title">동네인증을 해주세요!</string>
    <string name="signup_title2">본인이 살고 있는 곳을 검색해\n입력해주세요.</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="signup_success_title">가입이 완료되었습니다.</string>
    <string name="signup_success_content">로그인 화면으로 이동합니다.</string>

    <!-- 회원가입 4 성별과 생년월일 -->
    <string name="signup_genderbirth_title">성별과 생년월일을\n    선택해주세요.</string>
    <string name="signup_genderbirth_hint_msg">생년월일</string>
    <string name="signup_genderbirth_helper_msg">MM/DD/YYYY</string>
    <string name="signup_gender_man">남성</string>
    <string name="signup_gender_woman">여성</string>


    <!-- 회원가입 6 프로필 String -->
    <string name="sign_profile_guide">프로필 사진과\n나의 여행 관심사를 선택해주세요</string>
    <string name="sign_category_guide">나의 카테고리 선택</string>
    <string name="sign_profile_name">닉네임</string>
    <!-- chip-->
    <string name="sign_chip_active">활동</string>
    <string name="sign_chip_nature">자연</string>
    <string name="sign_chip_healing">힐링</string>
    <string name="sign_chip_picture">사진</string>
    <string name="sign_chip_culture">문화</string>
    <string name="sign_chip_taste">맛집</string>
    <string name="sign_chip_shopping">쇼핑</string>
    <string name="signup_phone_title">휴대전화 번호를 입력하세요.</string>
    <string name="signup_hint_phone_number">전화번호</string>
    <string name="signup_button_number">인증 요청</string>
    <string name="login_findPw_password">비밀번호</string>
    <string name="login_input_id">아이디를 입력해주세요.</string>
    <string name="login_input_password">비밀번호를 입력해주세요.</string>
    <string name="button_login">로그인</string>
    <string name="button_signup">회원가입</string>
    <string name="login_find_id">아이디 찾기</string>
    <string name="login_find_password">비밀번호 찾기</string>
    <string name="find_mate_another_search">다른 장소도 검색해보세요.</string>
    <string name="meeting_post_title">모임 생성</string>
    <string name="select_start_end_date">모임 시작, 종료 날짜를 선택해주세요.</string>
    <string name="select_deadline_day">모집 마감 날짜를 선택해주세요.</string>
    <string name="meeting_post_description">장소는 아이콘, 날짜는 박스를 클릭해주세요.</string>
    <string name="meeting_picture_title">사진을 골라주세요.</string>
    <string name="meeting_picture_description">사진은 최대 3장 선택할 수 있어요.</string>
    <string name="meeting_category_title">카테고리를 골라주세요.</string>
    <string name="meeting_post_member">모임 인원을 설정해주세요.</string>
    <string name="chip_rest">휴식</string>
    <string name="pamplet_welcome">환영합니다!\n순간의 감정이나 사진들을\n팜플렛에 기록해보세요!</string>
    <string name="record_pamphlet">팜플렛 썸네일을 골라주세요.</string>
    <!-- END -->
    <!-- 회원가입 성공메시지 -->

    <!-- 마이페이지 -->
    <string name="mypage_title">마이페이지</string>
    <string name="mypage_nickname">회원 이름 </string>
    <string name="mypage_userid">user_id</string>
    <string name="mypage_logout">로그아웃</string>
    <string name="mypage_withdrawal">회원탈퇴</string>
    <string name="mypage_edit_personal_info">개인정보\n수정하기</string>
    <string name="mypage_trust_level">신뢰도</string>


    <!-- 내 기록 페이지 -->
    <string name="myRecord_title">나의 팜플렛</string>

    <!-- 팜플렛 만들기 -->
    <string name="makePamphlet_title">팜플렛 만들기</string>

    <!-- 팜플렛 구경하기-->
    <string name="lookPamphlet_title">팜플렛 구경하기</string>
    <!-- 회원정보 수정하기 -->
    <string name="edit_myinfo_title">회원정보 수정하기</string>
    <string name="edit_myinfo_phone_number">전화번호</string>
    <string name="edit_myinfo_birthday">생년월일</string>
    <string name="edit_myinfo_categories">카테고리</string>
    <string name="edit_myinfo_etc">기타등등</string>
    <string name="return_to_mypage">돌아가기</string>
    <string name="delete_my_account">탈퇴하기</string>

    <!-- 체크박스 1 -->
    <string name="edit_myinfo_checkbox1_taste">맛집</string>
    <string name="edit_myinfo_checkbox2_healing">힐링</string>
    <string name="edit_myinfo_checkbox3_culture">문화</string>
    <string name="edit_myinfo_checkbox4_shopping">쇼핑</string>
    <string name="edit_myinfo_checkbox5_active">활동</string>
    <string name="edit_myinfo_checkbox6_picture">사진</string>
    <string name="edit_myinfo_checkbox7_nature">자연</string>
    <string name="edit_myinfo_checkbox8_rest">휴식</string>
    <string name="upload_picture_video">사진을 업로드 해보세요.</string>
    <string name="upload_video">영상을 업로드 해보세요.</string>

    <!-- 내 그룹 -->
    <string name="my_group">내 그룹</string>

</resources>