<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/tv_signup_nickname_title"

        style="@style/Text.Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="32sp"
        android:text="@string/signup_nickname_title"

        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintVertical_bias="0.15"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_signup_nickname"

        android:layout_width="250dp"
        android:layout_height="wrap_content"
        app:helperText="@string/signup_nickname_helper_msg"
        android:hint="@string/signup_label_nickname"
        app:boxStrokeColor="@drawable/selector_input_layout_color"
        app:boxCornerRadiusBottomStart="16dp"
        app:boxCornerRadiusBottomEnd="16dp"
        app:boxCornerRadiusTopEnd="16dp"
        app:boxCornerRadiusTopStart="16dp"
        style="@style/TextLabel"
        app:layout_constraintHorizontal_bias="0.25"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_signup_nickname_title"
        android:layout_marginTop="70dp"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_signup_nickname"

            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:hint="@string/signup_hint_nickname_msg"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"

            />

    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_signup_nickname"
        android:text="@string/signup_btn_check_dup_id"
        android:layout_width="71dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tv_signup_nickname_title"
        app:layout_constraintStart_toEndOf="@id/til_signup_nickname"
        android:layout_marginTop="80dp"
        android:layout_marginStart="10dp"
        android:background="@drawable/btn_duplicate_check" />

    <TextView
        android:id="@+id/tv_signup_nickname_previous"
        style="@style/Text.Regular20"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/btn_ripple_effect"
        android:layout_marginStart="25dp"
        android:layout_marginBottom="18dp"
        android:text="@string/signup_previous"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tv_signup_nickname_next"
        style="@style/Text.Regular20"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/btn_ripple_effect"
        android:text="@string/signup_next"
        android:layout_marginEnd="25dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/tv_signup_nickname_previous" />

</androidx.constraintlayout.widget.ConstraintLayout>